<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bsu.mariacco.belarusapp.MainActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear0"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_group"
            tools:text="@string/groupByArea"
            android:layout_marginBottom="48dp"
            android:onClick="onClick"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="7dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:text="@string/groupByArea" />

        <Button
            android:text="@string/show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_show"
            tools:text="@string/show"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onClick"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:id="@+id/linear1"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/linear2"
        android:layout_alignStart="@+id/linear2">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_sort"
            android:layout_weight="1"
            android:entries="@array/sort_param"/>

        <Button
            android:text="@string/sorting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_sort"
            android:layout_weight="1"
            tools:text="@string/sorting"
            android:onClick="onClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear2"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/linear1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_filter_area"
            android:layout_weight="1"
            android:text="@string/filter_area_population"
            tools:text="@string/filter_area_population"
            android:onClick="onClick" />

        <Button
            android:text="@string/population_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_filter"
            android:layout_weight="1"
            tools:text="@string/filter_area_population"
            android:onClick="onClick" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="number"
            android:id="@+id/editText_filer_population"
            android:hint="@string/population" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/linear3"
        android:layout_below="@+id/linear2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/spinner_agreg"
            android:layout_weight="1"
            android:entries="@array/agreg_param"/>

        <Button
            android:text="@string/agregation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_agreg"
            android:layout_weight="1"
            tools:text="@string/agregation"
            android:onClick="onClick" />
    </LinearLayout>


</RelativeLayout>
